@@ -1,3 +1,7 @@
+2002-07-20  Alan Modra  <amodra@bigpond.net.au>
+
+	* budemang.c: Include config.h and string.h/strings.h.
+
 2002-07-16  Nick Clifton  <nickc@cambridge.redhat.com>
 
 	* NEWS: Add 'Changes in 2.13'.
